--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Burgers</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@700;800&family=Open+Sans&display=swap"
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@700;800&family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
         rel="stylesheet">
     <link rel="stylesheet" href="style/main.css">
 </head>
@@ -24,13 +24,69 @@
                     Лучшие бургеры
                 </h1>
                 <p>
-                    Закажи наши фирменные бургеры или собери что-то своё, a&nbsp;наши курьеры доставят за&nbsp;30&nbsp;минут
+                    Закажи наши фирменные бургеры или собери что-то своё, a&nbsp;наши курьеры доставят
+                    за&nbsp;30&nbsp;минут
                 </p>
                 <a href="#">заказать</a>
             </div>
             <div class="visual">
                 <div class="background"></div>
                 <img src="image/burger.png" alt="Burger">
+            </div>
+        </div>
+    </div>
+    <div class="promo">
+        <div class="container">
+            <div class="promo-left">
+                <p class="sales">Скидка</p>
+                <p class="cost">-20%</p>
+                <p class="description">При заказе на 3х и более персон мы делаем скидки, а также предоставляем скидки
+                    именинникам</p>
+            </div>
+            <div class="promo-right">
+                <p class="free">Бесплатно</p>
+                <p class="description">При заказе на сумму 500 рублей и более - доставляем бесплатно</p>
+                <a href="#">заказать</a>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="container">
+            <div>
+                <img class="logo" src="image/Logo.svg" alt="">
+            </div>
+            <div class="item">
+                <h2>основные ссылки</h2>
+                <ul>
+                    <li><a href="">Меню</a></li>
+                    <li><a href="">Заказ и Доставка</a></li>
+                    <li><a href="">Методы оплаты</a></li>
+                    <li><a href="">Контакты</a></li>
+                </ul>
+            </div>
+            <div class="item">
+                <h2>основная информация</h2>
+                <ul>
+                    <li>
+                        <span>
+                            Время
+                        </span>
+                        ПН - ВС<br>
+                        11:00 - 22:00 без перерывов
+                    </li>
+                    <li>
+                        <span>
+                            Адрес
+                        </span>
+                        Москва, ул. Тверская, 5, вход со двора
+                    </li>
+                </ul>
+            </div>
+            <div class="tel">
+                <ul>
+                    <li>+ 7 900 787 13-13</li>
+                    <li>+ 7 900 700 14-14</li>
+                </ul>
             </div>
         </div>
     </div>
