--- a/indexRus.html
+++ b/indexRus.html
@@ -20,15 +20,14 @@
         <div class="container">
             <div class="text">
                 <h1>
-                    <span>from 11:00 am to 10:00 pm</span>
-                    Best burgers
+                    <span>работаем c 11:00 до 22:00</span>
+                    Лучшие бургеры
                 </h1>
                 <p>
-                    <!--Закажи наши фирменные бургеры или собери что-то своё, a&nbsp;наши курьеры доставят
-                    за&nbsp;30&nbsp;минут-->
-                    Order our craft burgers or get them custom made, <br>and we'll deliver within 30 minutes
+                    Закажи наши фирменные бургеры или собери что-то своё, a&nbsp;наши курьеры доставят
+                    за&nbsp;30&nbsp;минут
                 </p>
-                <a href="#">order</a>
+                <a href="#">заказать</a>
             </div>
             <div class="visual">
                 <div class="background"></div>
@@ -39,15 +38,15 @@
     <div class="promo">
         <div class="container">
             <div class="promo-left">
-                <p class="sales">Sale</p>
+                <p class="sales">Скидка</p>
                 <p class="cost">-20%</p>
-                <p class="description">
-                    We make discounts for birthday celebrations<br> and parties of three or more </p>
+                <p class="description">При заказе на 3х и более персон мы делаем скидки, а также предоставляем скидки
+                    именинникам</p>
             </div>
             <div class="promo-right">
-                <p class="free">Free</p>
-                <p class="description">When ordering in the amount of $50 or more - we deliver for free</p>
-                <a href="#">order</a>
+                <p class="free">Бесплатно</p>
+                <p class="description">При заказе на сумму 500 рублей и более - доставляем бесплатно</p>
+                <a href="#">заказать</a>
             </div>
         </div>
     </div>
@@ -57,29 +56,29 @@
                 <img class="logo" src="image/Logo.svg" alt="">
             </div>
             <div class="item">
-                <h2>external links</h2>
+                <h2>основные ссылки</h2>
                 <ul>
-                    <li><a href="">Menu</a></li>
-                    <li><a href="">Order & Delivery</a></li>
-                    <li><a href="">Payment Options</a></li>
-                    <li><a href="">Contacts</a></li>
+                    <li><a href="">Меню</a></li>
+                    <li><a href="">Заказ и Доставка</a></li>
+                    <li><a href="">Методы оплаты</a></li>
+                    <li><a href="">Контакты</a></li>
                 </ul>
             </div>
             <div class="item">
-                <h2>main information</h2>
+                <h2>основная информация</h2>
                 <ul>
                     <li>
                         <span>
-                            Time
+                            Время
                         </span>
-                        Mon - Sun<br>
-                        11:00 am - 10:00 pm
+                        ПН - ВС<br>
+                        11:00 - 22:00 без перерывов
                     </li>
                     <li>
                         <span>
-                            Address
+                            Адрес
                         </span>
-                        5 Tverskaya street, Moscow
+                        Москва, ул. Тверская, 5, вход со двора
                     </li>
                 </ul>
             </div>
